# python-project-83

./: .coverage  .gitignore  Flask_project.db  Makefile  README.md  build.sh  database.sql  myproject.db  pyproject.toml
.github/workflows/: github-actions.yaml
page_analyzer/: __init__.py  app.py
page_analyzer/model/: __init__.py  db.py  repository.py
page_analyzer/templates/: index.html  show.html  show_id.html
page_analyzer/tests/: conftest.py  test_repository.py
page_analyzer/tests/test_data/: html_check_test.html
